[gd_scene load_steps=3 format=3 uid="uid://tcn5wh8gstsu"]

[ext_resource type="Script" path="res://codings/Interactions/ladder.gd" id="1_i5v3q"]
[ext_resource type="PackedScene" uid="uid://c8q4jskbbhvnn" path="res://codings/Interactions/Interactable.tscn" id="2_bewv0"]

[node name="Ladder" type="Node2D"]
z_index = 8
position = Vector2(493, 207)
script = ExtResource("1_i5v3q")

[node name="BottomInteractable" parent="." instance=ExtResource("2_bewv0")]
position = Vector2(0, 85)
LabelText = "Climb"
Length = 90

[node name="TopInteractable" parent="." instance=ExtResource("2_bewv0")]
LabelText = "Climb down"
Length = 140

[node name="End1" type="Marker2D" parent="."]
position = Vector2(0, -20)

[node name="End2" type="Marker2D" parent="."]
position = Vector2(0, 115)

[node name="Start1" type="Marker2D" parent="."]
position = Vector2(0, 18)

[node name="Start2" type="Marker2D" parent="."]
position = Vector2(0, 85)

[connection signal="action" from="BottomInteractable" to="." method="climb_up"]
[connection signal="action" from="TopInteractable" to="." method="climb_down"]
